Fixed the overflow-x bug

--- a/css/css.css
+++ b/css/css.css
@@ -4,6 +4,8 @@
 }
 
 body {
+  width: 100%;
+  overflow-x: hidden;
   padding: 0;
   margin: 0;
   position: relative;
